--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
 import { getEntry } from "astro:content";
 
-import BaseHead from "@components/BaseHead.astro";
-import Header from "@components/Header.astro";
-import Footer from "@components/Footer.astro";
+import BaseHead from '@components/BaseHead.astro'
+import Header from "@components/Header.astro"
+import Footer from "@components/Footer.astro"
 
 import Hero from "@components/blocks/Hero.astro";
 import Text from "@components/blocks/Text.astro";
@@ -13,18 +13,18 @@ import CodeBlock from "@components/blocks/CodeBlock.astro";
 import Cards from "@components/blocks/Cards.astro";
 
 const Blocks = {
-	hero: Hero,
-	text: Text,
-	quote: Quote,
+  	hero: Hero,
+  	text: Text,
+  	quote: Quote,
 	carousel: Carousel,
 	code: CodeBlock,
 	cards: Cards,
 } as any;
 
-const entry = await getEntry("pages", "home");
+const entry = await getEntry("pages", "about");
 
 if (!entry) {
-	return Astro.redirect("/404");
+  return Astro.redirect('/404');
 }
 
 const { blocks } = entry.data;
@@ -32,20 +32,18 @@ const { blocks } = entry.data;
 
 <html lang="en">
 	<head>
-		<BaseHead />
-	</head>
+        <BaseHead />
+    </head>
 	<body>
 		<Header />
 		<main>
 			<article>
-				{
-					blocks.map((block: any) => {
-						const Component = Blocks[block.type];
-						return Component ? <Component {...block} /> : null;
-					})
-				}
+				{blocks.map((block: any)=> {
+					const Component = Blocks[block.type];
+					return Component ? <Component {...block} /> : null;
+				})}
 			</article>
 		</main>
 		<Footer />
-	</body>
+	</body>	
 </html>
