post-break sync

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const { nav, global } = entry.data;
 <header>
 	<nav class="pc-nav">
 		<a id="logo-container" href="../">
-			<img src="/img/icons/drone_logo.png" />
+			<img src="/img/icons/slavic_logo.png" />
 			<h2>{global.title}</h2>
 		</a>
 		<div class="pc-links">
@@ -41,7 +41,7 @@ const { nav, global } = entry.data;
 	<nav class="mobile-nav">
 		<div class="upper-bar">
 			<a id="logo-container" href="./">
-				<img src="/img/icons/drone_logo.png" />
+				<img src="/img/icons/slavic_logo.png" />
 				<h2>{global.title}</h2>
 			</a>
 			<div id="hamburger-icon">
@@ -69,7 +69,7 @@ const { nav, global } = entry.data;
 		margin: 0;
 		background: white;
 		box-shadow: 0 2px 8px rgba(from var(--black) r g b / 0.05);
-		font-family: 'Quantico', 'serif';
+		font-family: 'Inter', 'serif';
 	}
 	img {
 		height: 50px;
@@ -82,7 +82,7 @@ const { nav, global } = entry.data;
 		margin: 0 0 0 15px;
 		font-size: 1.2em;
 		align-self: center;
-		font-family: 'Quantico', 'serif';
+		font-family: 'Inter', 'serif';
 	}
 	h2 a,
 	h2 a.active {
