--- a/src/components/blocks/Hero.astro
+++ b/src/components/blocks/Hero.astro
@@ -47,7 +47,7 @@ const { title, image, align } = Astro.props;
         color: var(--gray-light);
         margin: 0;
         font-size: 3rem; /* Optional: makes it stand out more */
-        font-family: "Quantico", "serif";
+        font-family: "Inter", "serif";
         font-weight: bold;
     }
 </style>
