--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,30 +24,16 @@
 	font-display: swap;
 }
 @font-face {
-	font-family: 'Quantico';
-	src: url('/fonts/Quantico-Regular.ttf') format('truetype');
+	font-family: 'Inter';
+	src: url('/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
-	font-family: 'Quantico';
-	src: url('/fonts/Quantico-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-	font-display: swap;
-}
-@font-face {
-	font-family: 'Quantico';
-	src: url('/fonts/Quantico-Italic.ttf') format('truetype');
+	font-family: 'Inter';
+	src: url('/fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
 	font-weight: normal;
-	font-style: italic;
-	font-display: swap;
-}
-@font-face {
-	font-family: 'Quantico';
-	src: url('/fonts/Quantico-BoldItalic.ttf') format('truetype');
-	font-weight: bold;
 	font-style: italic;
 	font-display: swap;
 }
